--- a/griggschainexperiment4.ipynb
+++ b/griggschainexperiment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqKUxvCaphtNTcAT4cXkEK",
+      "authorship_tag": "ABX9TyNfzGNZVjN+trAKOeWf4lIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,84 +30,91 @@
       "cell_type": "code",
       "source": [
         "# ==========================================\n",
-        "# MASTER CELL: PRE-FREEZED FREEZER PROTOCOL (DD + RECURSIVE)\n",
+        "# MASTER CELL: PROTOCOL V4 (SMART CPMG)\n",
         "# ==========================================\n",
         "\n",
         "!pip install -q qiskit qiskit-ibm-runtime qiskit-aer numpy\n",
-        "\n",
         "import numpy as np\n",
-        "import socket\n",
         "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
         "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
         "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
         "\n",
-        "# --- PART 1: THE \"PRE-FREEZED\" ARCHITECTURE ---\n",
-        "def create_prefreezed_circuit(travel_time_us=10, hold_time_us=20):\n",
+        "# --- HELPER: CPMG SEQUENCE (The Industrial Standard) ---\n",
+        "def apply_cpmg_sequence(qc, qubit, duration_us, n_pulses=4):\n",
         "    \"\"\"\n",
-        "    Implements Damian Griggs' \"Prefreezed Freezer\" Logic.\n",
-        "    1. Pre-Cooling: Echo on q2 while q0 prepares (The Freezer is On).\n",
-        "    2. Delivery: Teleportation.\n",
-        "    3. Post-Cooling: Echo on q2 after delivery (Keeping it Frozen).\n",
+        "    Applies CPMG-N (N X-gates).\n",
+        "    Structure: [d/2] - X - [d] - X - [d] - X ... - [d/2]\n",
+        "    Robust against pulse angle errors and T2 dephasing.\n",
         "    \"\"\"\n",
+        "    if duration_us <= 0:\n",
+        "        return\n",
+        "\n",
+        "    # Calculate delay intervals\n",
+        "    total_intervals = 2 * n_pulses # N pulses create N+1 gaps, but ends are half-gaps\n",
+        "    # Actually, standard CPMG definition:\n",
+        "    # 4 pulses: d/2 - X - d - X - d - X - d - X - d/2\n",
+        "    # Total time = 4d.\n",
+        "\n",
+        "    dt_delay = duration_us / n_pulses # The length of one full interval\n",
+        "    d_edge = dt_delay / 2.0\n",
+        "\n",
+        "    # Sequence\n",
+        "    qc.delay(d_edge, qubit, unit='us')\n",
+        "    for _ in range(n_pulses):\n",
+        "        qc.x(qubit)\n",
+        "        if _ < n_pulses - 1: # Don't delay after the last pulse yet\n",
+        "            qc.delay(dt_delay, qubit, unit='us')\n",
+        "    qc.delay(d_edge, qubit, unit='us')\n",
+        "\n",
+        "# --- PART 1: THE CIRCUIT ---\n",
+        "def create_smart_freezer_circuit(travel_time_us=10, hold_time_us=20):\n",
         "    qr = QuantumRegister(3, 'q')\n",
         "    cr_hop1 = ClassicalRegister(2, 'hop1')\n",
         "    cr_hop2 = ClassicalRegister(2, 'hop2')\n",
         "    cr_final = ClassicalRegister(1, 'result')\n",
         "    qc = QuantumCircuit(qr, cr_hop1, cr_hop2, cr_final)\n",
         "\n",
-        "    # --- PHASE 0: THE \"PRE-FREEZE\" (Simultaneous Ops) ---\n",
-        "    # While q0 prepares (The \"Truck\"), q2 keeps pulsing (The \"Freezer\")\n",
+        "    theta = 2 * np.arccos(np.sqrt(0.75))\n",
         "\n",
-        "    # Lane 1: The Truck (Source q0)\n",
-        "    qc.ry(2 * np.arccos(np.sqrt(0.75)), 0) # Load the cargo (75% State)\n",
-        "    if travel_time_us > 0:\n",
-        "        qc.delay(travel_time_us, 0, unit='us') # The Drive\n",
+        "    # --- PHASE 0: THE \"WARM\" WAIT (Optimized) ---\n",
+        "    # We intentionally DO NOT pulse q2 here.\n",
+        "    # q2 is in |0>, so it is immune to dephasing.\n",
+        "    # Pulsing it would only expose it to T1 decay.\n",
         "\n",
-        "    # Lane 2: The Freezer (Target q2) - Pre-Cooling\n",
-        "    # We apply an X-Echo during the exact time q0 is busy\n",
+        "    qc.ry(theta, 0) # Load Cargo\n",
         "    if travel_time_us > 0:\n",
-        "        qc.delay(travel_time_us / 2, 2, unit='us')\n",
-        "        qc.x(2) # PRE-ECHO PULSE (Cleaning the empty freezer)\n",
-        "        qc.delay(travel_time_us / 2, 2, unit='us')\n",
-        "        qc.x(2) # Restore orientation for reception\n",
+        "        qc.delay(travel_time_us, 0, unit='us')\n",
+        "        # q2 just waits (implicitly) or we can explicit delay\n",
+        "        qc.delay(travel_time_us, 2, unit='us')\n",
         "\n",
         "    qc.barrier()\n",
         "\n",
-        "    # --- PHASE 1: THE DELIVERY (Teleportation) ---\n",
+        "    # --- PHASE 1: DELIVERY ---\n",
         "    qc.h(1)\n",
-        "    qc.cx(1, 2) # Entangle Bridge & Buffer\n",
-        "    qc.cx(0, 1) # Entangle Source & Bridge\n",
+        "    qc.cx(1, 2)\n",
+        "    qc.cx(0, 1)\n",
         "    qc.h(0)\n",
         "    qc.measure(0, cr_hop1[0])\n",
         "    qc.measure(1, cr_hop1[1])\n",
         "\n",
-        "    # Dynamic Correction (Unloading)\n",
         "    with qc.if_test((cr_hop1[1], 1)):\n",
         "        qc.x(2)\n",
         "    with qc.if_test((cr_hop1[0], 1)):\n",
         "        qc.z(2)\n",
         "    qc.barrier()\n",
         "\n",
-        "    # --- PHASE 2: RECYCLING & HOLDING (Post-Freeze) ---\n",
-        "    # 1. Send the truck back (Recycle q0)\n",
+        "    # --- PHASE 2: THE FREEZER (CPMG) ---\n",
         "    qc.reset(0)\n",
         "    qc.reset(1)\n",
         "\n",
-        "    # 2. Keep the Freezer Running (Stabilize q2)\n",
+        "    # NOW we turn on the freezer because q2 holds data.\n",
         "    if hold_time_us > 0:\n",
-        "        qc.delay(hold_time_us / 2, 2, unit='us')\n",
-        "        qc.x(2) # POST-ECHO PULSE\n",
-        "        qc.delay(hold_time_us / 2, 2, unit='us')\n",
-        "        qc.x(2)\n",
+        "        # CPMG-4 (4 X pulses) is a sweet spot for 20us on Torino\n",
+        "        apply_cpmg_sequence(qc, 2, hold_time_us, n_pulses=4)\n",
         "\n",
         "    qc.barrier()\n",
         "\n",
-        "    # --- PHASE 3: VERIFICATION ---\n",
-        "    # Return to sender to check if it melted\n",
-        "    qc.ry(-2 * np.arccos(np.sqrt(0.75)), 2) # Inversion check on q2 directly?\n",
-        "    # Or teleport back? Let's use your original \"Teleport Back\" to prove full routing loop.\n",
-        "\n",
-        "    # Teleport back to q0 (The full round trip)\n",
+        "    # --- PHASE 3: RETURN & CHECK ---\n",
         "    qc.h(1)\n",
         "    qc.cx(1, 0)\n",
         "    qc.cx(2, 1)\n",
@@ -120,13 +127,14 @@
         "    with qc.if_test((cr_hop2[0], 1)):\n",
         "        qc.z(0)\n",
         "\n",
-        "    # Final Check\n",
+        "    # Phase Verification (Inverse)\n",
+        "    qc.ry(-theta, 0)\n",
         "    qc.measure(0, cr_final)\n",
         "\n",
         "    return qc\n",
         "\n",
         "# --- PART 2: DEPLOYMENT ---\n",
-        "MY_TOKEN = \"MYTOKENWASHEREANDYOUCANTHAVEIT\"\n",
+        "MY_TOKEN = \"MYTOKENWAZHERE\"\n",
         "\n",
         "if MY_TOKEN == \"YOUR_TOKEN_HERE\" or MY_TOKEN == \"\":\n",
         "    print(\"STOP: Please paste your IBM Token.\")\n",
@@ -134,19 +142,15 @@
         "    try:\n",
         "        service = QiskitRuntimeService(channel=\"ibm_quantum_platform\", token=MY_TOKEN)\n",
         "\n",
-        "        # Hunting for the best available machine\n",
-        "        print(\"[Step 1] Initializing Cold Chain Protocol...\")\n",
+        "        print(\"[Step 1] Initializing Smart CPMG Protocol...\")\n",
         "        backend = service.least_busy(min_num_qubits=127, operational=True, simulator=False)\n",
         "        print(f\"         Targeting: {backend.name}\")\n",
         "\n",
-        "        # Generate Circuit with 10us Pre-Cool and 20us Post-Hold\n",
-        "        print(\"[Step 2] Activating Prefreezed Freezer (10us Pre / 20us Post)...\")\n",
-        "        qc_cold = create_prefreezed_circuit(travel_time_us=10, hold_time_us=20)\n",
+        "        print(\"[Step 2] Compiling V4 Circuit (Just-In-Time CPMG)...\")\n",
+        "        qc_v4 = create_smart_freezer_circuit(travel_time_us=10, hold_time_us=20)\n",
         "\n",
-        "        # Optimization Level 3 is vital for scheduling the parallel delays correctly\n",
-        "        print(\"         Compiling with Dynamical Decoupling...\")\n",
         "        pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
-        "        isa_qc = pm.run(qc_cold)\n",
+        "        isa_qc = pm.run(qc_v4)\n",
         "\n",
         "        print(\"[Step 3] Executing...\")\n",
         "        sampler = Sampler(backend)\n",
@@ -166,17 +170,21 @@
         "        fidelity = (zeros/total)*100\n",
         "\n",
         "        print(\"\\n\" + \"*\"*45)\n",
-        "        print(f\" DAMIAN GRIGGS: COLD CHAIN REPORT\")\n",
+        "        print(f\" DAMIAN GRIGGS: V4 SMART FREEZER\")\n",
         "        print(\"*\"*45)\n",
-        "        print(f\"Architecture:   Pre-Freezed Recursive Link\")\n",
-        "        print(f\"Pre-Cooling:    ACTIVE (10us)\")\n",
-        "        print(f\"Post-Holding:   ACTIVE (20us)\")\n",
+        "        print(f\"Sequence:       CPMG-4\")\n",
+        "        print(f\"Phase 0 (Idle): OFF (Saved T1)\")\n",
+        "        print(f\"Phase 2 (Hold): ON (CPMG Protected)\")\n",
         "        print(\"-\" * 45)\n",
-        "        print(f\"FINAL FIDELITY: {fidelity:.2f}%\")\n",
+        "        print(f\"ACTUAL SCORE:   {fidelity:.2f}%\")\n",
         "        print(\"*\"*45)\n",
         "\n",
-        "        if fidelity > 65.05:\n",
-        "            print(\"❄️ VALIDATED: Pre-cooling improved the stability.\")\n",
+        "        if fidelity > 75.0:\n",
+        "            print(\"❄️ SUCCESS: Smart management beat the brute force.\")\n",
+        "        elif fidelity > 64.69:\n",
+        "            print(\"📈 RECOVERY: We are back on the right track.\")\n",
+        "        else:\n",
+        "            print(\"🤔 NOTE: Hardware noise floor reached.\")\n",
         "\n",
         "    except Exception as e:\n",
         "        print(f\"Error: {e}\")"
@@ -186,31 +194,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jyM88_qIR5Cj",
-        "outputId": "a83185e3-977a-4ab7-8d3e-806fff0d6227"
+        "outputId": "8d415740-7abc-42ba-9be6-aa03d632aded"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "qiskit_runtime_service._discover_account:WARNING:2025-12-19 15:36:40,342: Loading account with the given token. A saved account will not be used.\n",
-            "qiskit_runtime_service.__init__:WARNING:2025-12-19 15:36:44,293: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: open-instance. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
+            "qiskit_runtime_service._discover_account:WARNING:2025-12-19 15:57:43,852: Loading account with the given token. A saved account will not be used.\n",
+            "qiskit_runtime_service.__init__:WARNING:2025-12-19 15:57:45,910: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: open-instance. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[Step 1] Initializing Cold Chain Protocol...\n"
+            "[Step 1] Initializing Smart CPMG Protocol...\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "qiskit_runtime_service.backends:WARNING:2025-12-19 15:36:44,724: Loading instance: open-instance, plan: open\n",
-            "qiskit_runtime_service.backends:WARNING:2025-12-19 15:36:46,600: Using instance: open-instance, plan: open\n"
+            "qiskit_runtime_service.backends:WARNING:2025-12-19 15:57:46,396: Loading instance: open-instance, plan: open\n",
+            "qiskit_runtime_service.backends:WARNING:2025-12-19 15:57:47,944: Using instance: open-instance, plan: open\n"
           ]
         },
         {
@@ -218,21 +226,20 @@
           "name": "stdout",
           "text": [
             "         Targeting: ibm_torino\n",
-            "[Step 2] Activating Prefreezed Freezer (10us Pre / 20us Post)...\n",
-            "         Compiling with Dynamical Decoupling...\n",
+            "[Step 2] Compiling V4 Circuit (Just-In-Time CPMG)...\n",
             "[Step 3] Executing...\n",
-            "         Job ID: d52n23psmlfc739e40b0\n",
+            "         Job ID: d52nbv7p3tbc73alnpt0\n",
             "\n",
             "*********************************************\n",
-            " DAMIAN GRIGGS: COLD CHAIN REPORT\n",
+            " DAMIAN GRIGGS: V4 SMART FREEZER\n",
             "*********************************************\n",
-            "Architecture:   Pre-Freezed Recursive Link\n",
-            "Pre-Cooling:    ACTIVE (10us)\n",
-            "Post-Holding:   ACTIVE (20us)\n",
+            "Sequence:       CPMG-4\n",
+            "Phase 0 (Idle): OFF (Saved T1)\n",
+            "Phase 2 (Hold): ON (CPMG Protected)\n",
             "---------------------------------------------\n",
-            "FINAL FIDELITY: 71.51%\n",
+            "ACTUAL SCORE:   72.52%\n",
             "*********************************************\n",
-            "❄️ VALIDATED: Pre-cooling improved the stability.\n"
+            "📈 RECOVERY: We are back on the right track.\n"
           ]
         }
       ]
